# LoggerProject

./: .gitignore  CMakeLists.txt  Logger.cpp  Logger.h  Main.cpp  README.md  test.cpp
